[gd_scene load_steps=14 format=3 uid="uid://huxmjlt1den"]

[ext_resource type="Texture2D" uid="uid://cx1ivjobggp8n" path="res://assets/sprites/rogues.png" id="1_fmv3f"]
[ext_resource type="Script" uid="uid://bwj2xlqn8p63r" path="res://scenes/unit/unit.gd" id="1_fvc8g"]
[ext_resource type="Resource" uid="uid://la5ni2oclk7m" path="res://data/units/bjorn.tres" id="2_vh40f"]
[ext_resource type="Material" uid="uid://bb8m5fhpi4wqn" path="res://assets/shaders/2d_outline_shader.tres" id="3_3po7s"]
[ext_resource type="Script" uid="uid://ckysvesca0v06" path="res://components/drag_and_drop.gd" id="4_bhlit"]
[ext_resource type="PackedScene" uid="uid://b8o330eqoqq2r" path="res://scenes/health_bar/health_bar.tscn" id="5_5im7a"]
[ext_resource type="Script" uid="uid://cs18rirdcxoj8" path="res://components/packed_sprite2d.gd" id="5_7jhsn"]
[ext_resource type="Script" uid="uid://d3qn0y8w8dur0" path="res://components/velocity_based_rotation.gd" id="5_vgvef"]
[ext_resource type="PackedScene" uid="uid://4yfchakx2no2" path="res://scenes/iter_icon/tier_icon.tscn" id="5_w7udy"]
[ext_resource type="PackedScene" uid="uid://b878qvx5s7chx" path="res://scenes/mana_bar/mana_bar.tscn" id="6_7jhsn"]
[ext_resource type="Script" uid="uid://obgt1sotltcc" path="res://components/outline_highlighter.gd" id="7_0wuuu"]
[ext_resource type="Script" uid="uid://c1mumctf5pbr" path="res://custom_nodes/unit_animations.gd" id="9_vqlpx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmv3f"]
size = Vector2(36, 36)

[node name="Unit" type="Area2D" groups=["units"]]
script = ExtResource("1_fvc8g")
stats = ExtResource("2_vh40f")
metadata/_edit_group_ = true

[node name="Visuals" type="CanvasGroup" parent="."]
material = ExtResource("3_3po7s")

[node name="Skin" type="Sprite2D" parent="Visuals"]
unique_name_in_owner = true
texture = ExtResource("1_fmv3f")
offset = Vector2(16, 8)
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)
script = ExtResource("5_7jhsn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_fmv3f")

[node name="HealthBar" parent="." instance=ExtResource("5_5im7a")]

[node name="ManaBar" parent="." instance=ExtResource("6_7jhsn")]

[node name="TierIcon" parent="." instance=ExtResource("5_w7udy")]
offset_top = -10.0
offset_bottom = 0.0
mouse_filter = 2
stats = ExtResource("2_vh40f")

[node name="DragAndDrop" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_bhlit")
target = NodePath("..")

[node name="VelocityBasedRotation" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("5_vgvef")
enabled = false
target = NodePath("../Visuals/Skin")

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("7_0wuuu")
visuals = NodePath("../Visuals")
outline_thickness = 2

[node name="UnitAnimations" type="Node" parent="." node_paths=PackedStringArray("unit")]
script = ExtResource("9_vqlpx")
unit = NodePath("..")
metadata/_custom_type_script = "uid://c1mumctf5pbr"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
